Fix the url endpoint

--- a/githubarium/templates/base.html
+++ b/githubarium/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="ui fixed main menu">
-    <a class="active item" href="{{ url_for("home") }}">
+    <a class="active item" href="{{ url_for("home.index") }}">
         <i class="home icon"></i> Githubarium
     </a>
     <div class="right menu">
