--- a/githubarium/templates/welcome.html
+++ b/githubarium/templates/welcome.html
@@ -4,7 +4,7 @@
     <div class="ui grid">
         <div class="column">
             <h1 class="header">Welcome to GitHubarium!</h1>
-            <a class="huge primary ui icon button">
+            <a class="huge primary ui icon button" href="{{ url_for('user.login') }}">
                 <i class="github sign icon"></i> Sign in with your GitHub account
             </a>
         </div>
