Group repos by their languages

--- a/githubarium/templates/base.html
+++ b/githubarium/templates/base.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="/static/semantic-0.12.4/css/semantic.min.css" />
     <style>
         html, body { margin: 0; padding: 0 }
+        .repositories.items .item { min-height: 150px; }
     </style>
 </head>
 <body>
